# django2

./: Readme  dump.rdb  pyproject.toml
miniproject2/: .env  Readme  analytics.sqlite3  db.sqlite3  pytest.ini
miniproject2/analytics/: admin.py  db_router.py  db_routers.py  middleware.py  models.py  url.py  urls.py  views.py
miniproject2/analytics/migrations/: 0001_initial.py
miniproject2/attendance/: models.py  serializers.py  tests.py  urls.py  views.py
miniproject2/attendance/migrations/: 0001_initial.py
miniproject2/courses/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
miniproject2/courses/migrations/: 0001_initial.py  0002_rename_instructor_course_proffessor.py  0003_rename_proffessor_course_professor.py
miniproject2/grades/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
miniproject2/grades/migrations/: 0001_initial.py  0002_alter_grade_grade.py
miniproject2/miniproject2/: celery.py  settings.py  urls.py
miniproject2/miniproject2/management/commands/: custom_migrate.py
miniproject2/notifications/: tasks.py  tests.py
miniproject2/static/templates/: base.html
miniproject2/static/templates/templates_analytics/: graph.html
miniproject2/students/: models.py  tests.py  urls.py  views.py
miniproject2/students/migrations/: 0001_initial.py
miniproject2/templates/: base.html
miniproject2/users/: apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
miniproject2/users/migrations/: 0001_initial.py
