[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Daniyal <daniyal.mambetov.04@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
djoser = "^2.3.1"
djangorestframework-simplejwt = "^5.3.1"
psycopg2-binary = "^2.9.10"
redis = "^5.2.0"
django-redis = "^5.4.0"
pytest = "^8.3.3"
pytest-django = "^4.9.0"
django-filter = "^24.3"
drf-yasg = "^1.21.8"
swagger-ui-bundle = "^1.1.0"
django-celery-beat = "^2.7.0"
google-analytics = "^0.0.0"
django-environ = "^0.11.2"
python-dotenv = "^1.0.1"
django-debug-toolbar = "^4.4.6"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
